undo package.json update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://benneedsajob.com/",
+  "homepage": "https://benwade91.github.io/react-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
